# longtime

./: .gitignore  .rumdl.toml  Cargo.toml  Justfile  README.md  README_zh.md  package.json  timezones.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  time.rs
docs/: design.md  tasks.md
scripts/: verify_deploy.ts
src/: app.rs  config.rs  main.rs  ui.rs
